[package]
name = "cylon"
version = "0.1.0"
edition = "2021"

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/flash-attn", "candle-flash-attn"]
cudnn = ["candle-core/cudnn", "candle-nn/cuda", "candle-transformers/flash-attn", "candle-flash-attn"]

[dependencies]
candle-core = "0.8.3"
candle-transformers = "0.8.3"
candle-nn = "0.8.3"
tonic = "0.11"
prost = "0.12"
tokenizers = "0.15"
anyhow = "1.0"
safetensors = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.5.30", features = ["derive", "env"] }

[dependencies.candle-flash-attn]
version = "0.8.3"
optional = true
