[package]
name = "cylon-engine"
version = "0.1.0"
edition = "2024"

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/flash-attn", "candle-flash-attn"]
cudnn = ["candle-core/cudnn", "candle-nn/cuda", "candle-transformers/flash-attn", "candle-flash-attn"]

[dependencies]
candle-core = "0.9.1"
candle-transformers = "0.9.1"
candle-nn = "0.9.1"
tonic = "0.12.3"
prost = "0.13"
tarpc = { version = "0.36", features = ["tokio1"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokenizers = "0.15"
anyhow = "1.0"
safetensors = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.5.30", features = ["derive", "env"] }
minijinja = "2.7.0"
cylon-model = { path = "../cylon-model" }
cylon-config = { path = "../cylon-config" }

[build-dependencies]
tonic-build = "0.12"

[dependencies.candle-flash-attn]
version = "0.8.3"
optional = true
