[package]
name = "cylon-model"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = "0.9.1"
candle-transformers = "0.9.1"
candle-nn = "0.9.1"
tonic = "0.12.3"
prost = "0.13"
tarpc = { version = "0.36", features = ["tokio1"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokenizers = "0.15"
anyhow = "1.0"
safetensors = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.5.30", features = ["derive", "env"] }
minijinja = "2.7.0"
cylon-config = { path = "../cylon-config" }
