[package]
name = "cylon"
version = "0.1.0"
edition = "2024"

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
cudnn = ["candle-core/cudnn", "candle-nn/cudnn", "candle-transformers/cudnn"]
flash-attn = ["candle-transformers/flash-attn", "candle-flash-attn"]

[dependencies]
# Workspace dependencies
candle-core = { workspace = true }
candle-transformers = { workspace = true }
candle-nn = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tarpc = { workspace = true }
tokio = { workspace = true }
tokenizers = { workspace = true }
anyhow = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
clap = { workspace = true }
minijinja = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Internal dependencies
cylon-models = { workspace = true }
cylon-inference-engine = { workspace = true }
cylon-config = { workspace = true }

# Optional dependencies with specific configuration
candle-flash-attn = { workspace = true, optional = true }

[build-dependencies]
tonic-build = { workspace = true }
